# oraculo-ia

./: .gitignore  README.md  analysis_options.yaml  generate_epic10_content.py  generate_epic9_content.py  generate_pdf_architecture.py  generate_pdf_release_notes.py  pubspec.yaml  update_dev_metrics.py
.agents/: AGENTS.md
android/: gradle.properties
docs/: ACADEMIA_IA.md  AI_LAB.md  ANTIGRAVITY_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_0_5.md  CHANGELOG.md  COMPONENTS.md  CONTENT_AUDIT_EPIC_9.md  CREATOR_STUDIO.md  DATA_FLOW.md  DECISIONS.md  DESIGN_SYSTEM.md  ENTERPRISE_AUDIT.md  INSTALLATION.md  KNOWLEDGE_UNIVERSE.md  KNOWN_ISSUES.md  LEARNING_ENGINE.md  (+13 more)
oraculo-contacts/: .gitignore  LICENSE  README.md  pyproject.toml
oraculo-contacts/docs/: architecture.md  json-format.md
oraculo-contacts/examples/: contacts.sample.json
oraculo-contacts/scripts/: check.ps1  check.sh
oraculo-contacts/src/oraculo_contacts/: __init__.py  __main__.py  cli.py  exceptions.py  logging_config.py
oraculo-contacts/src/oraculo_contacts/application/: __init__.py  ports.py  use_cases.py
oraculo-contacts/src/oraculo_contacts/domain/: __init__.py  auditor.py  models.py
oraculo-contacts/src/oraculo_contacts/infrastructure/: json_importer.py  json_reporter.py
oraculo-contacts/src/oraculo_contacts/presentation/: __init__.py  console_reporter.py
oraculo-contacts/tests/: test_cli.py
oraculo-contacts/tests/application/: test_use_cases.py
oraculo-contacts/tests/domain/: test_auditor.py
oraculo-contacts/tests/infrastructure/: test_json_importer.py  test_json_reporter.py
oraculo-contacts/tests/presentation/: test_console_reporter.py
(+229 files in other folders)
