[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "oraculo-contacts"
version = "0.1.0"
description = "Auditor de contactos seguro, local y de solo lectura."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ORÁCULO CONTACTS contributors" }]
keywords = ["contacts", "audit", "privacy", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
oraculo-contacts = "oraculo_contacts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oraculo_contacts"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "D", "ANN"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN"]
"src/oraculo_contacts/infrastructure/json_importer.py" = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["oraculo_contacts"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
